# block_weave

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
environment/: .env_example
src/: demo.py  simple_agent.py
src/block_weave/core/: agent.py  block.py  block_type.py  data_loader.py  llm.py
src/block_weave/core/prompt_templates/: basic1.md  function.md
